--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ faster-whisper==1.1.1
 pvporcupine==1.9.5
 webrtcvad-wheels==2.0.14
 halo==0.0.31
-torch
-torchaudio
+torch==2.9.0
+torchaudio==2.9.0
 scipy==1.15.2
 openwakeword>=0.4.0
 websockets==15.0.1
-websocket-client==1.8.0
+websocket-client==1.9.0
 soundfile==0.13.1
